--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="price-row">
         <div class="price-col">
             <p>Basic</p>
-            <h3>19$ <span>/ month</span></h3>
+            <h3>$8.99<span>/month</span></h3>
             <ul>
                 <li>1 Account</li>
                 <li>Ad-free Videos</li>
@@ -24,25 +24,29 @@
         </div>
         <div class="price-col">
             <p>Pro</p>
-            <h3>19$ <span>/ month</span></h3>
+            <h3>$11.99<span>/month</span></h3>
             <ul>
-                <li>1 Account</li>
+                <li>5 Accounts</li>
                 <li>Ad-free Videos</li>
-                <li>10 Video Downloads</li>
+                <li>75 Video Downloads</li>
             </ul>
             <button>Get Started</button>
         </div>
         <div class="price-col">
             <p>Premium</p>
-            <h3>19$ <span>/ month</span></h3>
+            <h3>$14.99<span>/month</span></h3>
             <ul>
-                <li>1 Account</li>
+                <li>10 Accounts</li>
                 <li>Ad-free Videos</li>
-                <li>10 Video Downloads</li>
+                <li>Infinite Video Downloads</li>
             </ul>
             <button>Get Started</button>
         </div>
     </div>
+
+    <footer>
+        Made by MaxCodingTX
+    </footer>
 
 
 </body>
